--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,16 +1,12 @@
-# ????????? ????????
 browser.type=chrome
 browser.path=/Applications/Thorium.app/Contents/MacOS/Thorium
 browser.version=130
 
-# URL ???????????? ?????
-base.url=https://www.saucedemo.com/
+base.url=http://127.0.0.1:5000/
 
-# ???????? (? ????????)
 timeout.implicit=10
 timeout.explicit=5
 
-# ??????? ?????? ??? ??????
 test.user.standard=standard_user
 test.user.locked=locked_out_user
 test.password=secret_sauce
